Overflow fix

--- a/index.css
+++ b/index.css
@@ -2,6 +2,9 @@
   margin: 0;
   padding: 0;
 }
+body {
+  overflow-x: hidden;
+}
 
 a {
   color: white;
@@ -74,7 +77,7 @@ main {
 
 @media (max-width:999px) {
   body {
-    overflow: hidden;
+    overflow-x: hidden;
   }
 
   .nav_list {
